@@ -5,7 +5,7 @@ if (!process.env.STRIPE_SECRET_KEY) {
 }
 
 export const stripe = new Stripe(process.env.STRIPE_SECRET_KEY, {
-  apiVersion: '2024-04-10', // Use the latest API version
+  apiVersion: '2024-04-10' as any, // Use the latest API version
   typescript: true,
 });
 
