@@ -245,3 +245,14 @@ This update addressed Vercel build failures related to module resolution, ESLint
 *   **Note:** These changes resolve the type errors specifically within the Stripe and session handling logic across multiple files.
 *   **Known Issue:** The build (`npm run build`) now fails with a different, unrelated error in `src/app/app/report/[id]/report-display.tsx` (`Conversion of type 'JsonArray' to type 'RiskFlag[]' may be a mistake...`). This error needs separate investigation.
 
+
+
+
+
+### v20 (2025-05-04)
+
+*   **Fix:** Resolved the `RiskFlag[]` type assertion error (`Conversion of type 'JsonArray' to type 'RiskFlag[]' may be a mistake...`) encountered in v19 within `src/app/app/report/[id]/report-display.tsx`.
+    *   Applied the suggested fix by using a double type assertion (`as unknown as RiskFlag[]`) in both the `ReportPDF` and `ReportDisplay` components where `report.riskFlags` is cast.
+*   **Fix:** Addressed a related Stripe API version type error (`Type '"2024-04-10"' is not assignable to type '"2025-04-30.basil"'`) found in the original `src/lib/stripe.ts` file by casting the `apiVersion` to `any`. This aligns with the fixes applied to the inlined Stripe logic in API routes in v19.
+*   **Note:** With these changes, the build (`npm run build`) now successfully passes the compilation and type-checking phases. It fails later during page data collection due to missing Supabase environment variables (`Error: Supabase URL or service key is missing...`), which is expected in this environment and unrelated to the type errors fixed.
+
